# Machine-Learning-Model

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.backup.20250616_092249  .pre-commit-config.yaml.backup.20250616_092317  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gui  LICENSE  Makefile  PROJECT_CLEANUP_SUMMARY.md  PYQT6_GUI_GUIDE.md  README.md  ROOT_CLEANUP_FINAL.md  activate_venv.sh  cleanup_root.py  demo_pyqt6_gui.py  dmypy  docker-compose.yml  dvc.yaml  mkdocs.yml  move_test_stubs.py  move_to_legacy.py  mypy.ini  pyproject.toml  quick_test_agent.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  run_agent.bat  run_agent.sh  run_gui.py  run_gui_pyqt6.py  run_gui_pyqt6_only.py  run_pyqt6_demo.sh  (+6 more)
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  ci.yml.disabled  codeql.yml  codeql.yml.disabled  docker-gui.yml  docker-publish.yml  docker-publish.yml.disabled  docs.yml  docs.yml.disabled  release-drafter.yml.disabled
Learning/: pyvenv.cfg
config/: .flake8  README.md  mypy.ini  pytest.ini
config/dev/: .flake8  mypy.ini  pytest.ini
config/docker/: Dockerfile  Dockerfile.gui
data/: README.md
data/raw/: README.md
data/raw/classification/: README.md
data/raw/clustering/: README.md
data/raw/regression/: README.md
data/raw/text/: README.md
docs/: GUI_DOCKER.md  PROJECT_CLEANUP_SUMMARY.md  PYQT6_GUI_GUIDE.md  README.md  agent_mode_kickoff_prompt.md  folder_purposes.md  index.md  isort_and_venv.md  ml_workflow.md  project_plan.md  project_progress.md  project_structure.md  project_structure_guide.md  python-project-templates.md  test_plan.md  test_progress.md
docs/algorithms/: README.md
docs/algorithms/semi_supervised/: README.md  label_propagation.md  semi_supervised_svm.md
docs/algorithms/supervised/: README.md  decision_trees.md  random_forest.md  svm.md  (+1 more)
docs/api_reference/: README.md
docs/maintenance/: TEST_CLEANUP_COMPLETE.md
docs/runbooks/: dvc.md  mlflow.md  monitoring.md
examples/: README.md  complete_workflow_example.py  run_all_examples.py
examples/supervised_examples/: decision_tree_example.py  linear_regression_example.py  logistic_regression_example.py  random_forest_example.py
models/: README.md
models/legacy/: README.md
notebooks/: README.md
scripts/: FINAL_CLEANUP_PLAN.md  README.md  ROOT_CLEANUP_PLAN.md  cleanup_root_final.sh  commit_bypass.sh  create_python_project.py  fix_git_commits.sh  fix_git_unstaged_commits.sh  fix_mypy_daemon.py  fix_precommit_issues.sh  fix_vscode_settings.sh  prepare_sample_data.py  run_agent_docker.sh  run_comprehensive_tests.sh  run_gui.sh  run_gui_docker.sh  setup_tests.sh  setup_ubuntu.sh  setup_virtualenv.sh  train_sample_model.py  validate_setup.py
scripts/agent/: quick_test_agent.py  run_agent.bat  run_agent.sh
scripts/cleanup/: perform_root_minimize.py
scripts/development/: README.md  create_python_project.sh  make_scripts_executable.sh  setup_venv.sh
scripts/diagnostics/: health_check.py
scripts/docker/: gui_docker.sh  run.sh
scripts/fixes/: README.md  fix_isort_client.sh  fix_isort_connection.sh  fix_mypy_daemon.sh  fix_precommit_issues.sh  fix_vscode_settings.sh
scripts/git-tools/: README.md  cleanup_backups.sh  commit_bypass.sh  disable_precommit.sh  emergency_commit.sh  fix_and_stage.sh  fix_git_commits.sh  fix_git_unstaged_commits.sh  fix_precommit_config.sh  fix_precommit_config_staging.sh  fix_precommit_yaml.sh  fix_python_errors.sh  fix_python_syntax.sh  fix_specific_syntax_errors.sh  fix_syntax_errors.sh  fix_whitespace.sh
scripts/gui/: demo_pyqt6_gui.py  run_gui.py  run_gui_pyqt6.py  run_gui_pyqt6_only.py  run_pyqt6_demo.sh
scripts/legacy/: PROJECT_CLEANUP_SUMMARY.py  README.md  demo_pyqt6_gui.py  run_gui.py  test_algorithm_database.py  test_complete_gui.py  test_enhanced_results.py  test_gui_headless.py  test_imports.py  test_pyqt6_gui.py
scripts/monitoring/: generate_reports.py
scripts/testing/: README.md  create_test_output_folder.sh  quick_test.sh  run_tests.sh  test_agent_workflow.py  test_agent_workflow.sh  test_algorithm_database.py  test_complete_gui.py  test_data_pipeline.sh  test_enhanced_results.py  test_gui_headless.py  test_imports.py  test_pyqt6_gui.py  validate_enhanced_algorithms.py
src/machine_learning_model/: __init__.py  cli.py  logging_utils.py  main.py  main_app.py
test-output/: .gitignore  .gitkeep  README.md
test-outputs/: MOVED.md
test-outputs/coverage/: coverage.txt
tests/: __init__.py  conftest.py  test_machine_learning_model.py  test_platform_compatibility.py
tests/agent/: test_agent_e2e.py
tests/gui/: test_icon_fallback.py  test_main_window.py
tests/property/: test_decision_tree_properties.py  test_random_forest_properties.py
tests/test_data/: __init__.py  test_loaders.py  test_preprocessors.py  test_validators.py
tests/test_supervised/: test_decision_tree.py  test_random_forest.py
(+34 files in other folders)
